/*
Copyright Ziggurat Corp. 2017 All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "github.com/inklabsfoundation/inkchain/protos/ledger";
option java_package = "org.inklabsfoundation.inkchain.protos.ledger";

package ledger;

// LedgerSet encapsulates the read-write set and transfer set for a transaction
message LedgerSet {
    bytes txrwset = 1;
    bytes transet = 2;
    bytes crosstranset = 3;
}